# fast_api_practice

./: items_views.py  main.py  pyproject.toml
api_v1/products/: crud.py  views.py
core/models/: __init__.py  base.py  db_helper.py
users/: crud.py  shemas.py  views.py
