[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["Arteems <artm_frolov00@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
pydantic = {extras = ["email"], version = "^2.8.2"}
black = "^24.4.2"
pytest = "^8.3.2"
router = "^0.1"
email-validator = "^2.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
